--- a/index.html
+++ b/index.html
@@ -3,35 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de login</title>
+    <title>Formulario de Login</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="login-container">
-        <h2>Formulario de login</h2>
-        <form class="login-form">
-            <div class="input-group">
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
-            </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 d-none d-md-flex background-image"></div>
+            <div class="col-md-6 d-flex justify-content-center align-items-center">
+                <div class="login-container">
+                    <h2>Login Nike's</h2>
+                    <form class="login-form">
+                        <div class="input-group">
+                            <img src="logo-nike.jpg" class="img-fluid" alt="...">
+                            <label for="email">Correo Electrónico:</label>
+                            <input type="email" id="email" name="email" placeholder="Ingresa tu correo" required>
+                        </div>
+                        <div class="input-group">
+                            <label for="password">Contraseña:</label>
+                            <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required>
+                        </div>
 
-            <div class="role-selection">
-                <label>Seleccione su rol:</label>
-                <div class="roles">
-                    <label><input type="radio" name="role" value="Administrador"> Administrador</label>
-                    <label><input type="radio" name="role" value="Propietario"> Dueño</label>
-                    <label><input type="radio" name="role" value="Agente de ventas"> Gerente de ventas</label>
-                    <label><input type="radio" name="role" value="Prospecto"> Empleado</label>
+                        <div class="role-selection">
+                            <label>Seleccione su Rol:</label>
+                            <div class="roles">
+                                <label>
+                                    <input type="radio" name="role" value="Administrador"> Administrador
+                                </label>
+                                <label>
+                                    <input type="radio" name="role" value="Propietario"> Dueño
+                                </label>
+                                <label>
+                                    <input type="radio" name="role" value="Agente de ventas"> Gerente de Ventas
+                                </label>
+                                <label>
+                                    <input type="radio" name="role" value="Prospecto"> Empleado
+                                </label>
+                            </div>
+                        </div>
+
+                        <button type="submit">
+                            <span class="button_top">Iniciar Sesión</span>
+                        </button>
+                        <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+                    </form>
                 </div>
             </div>
-
-            <button type="submit">Acceder</button>
-        </form>
+        </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+
 
